--- a/html/index.html
+++ b/html/index.html
@@ -123,19 +123,19 @@
 
                             <div class="field has-margin-top-25">
                                 <div class="control">
-                                    <input class="input" id="address" name="address" type="text" placeholder="tb1q...">
+                                    <input class="input" id="address" name="address" type="text" placeholder="tb1q..." tabindex="1" autocapitalize="off" autocorrect="off" pattern="^tb1q.{8,}" title="Use a valid signet address.">
                                 </div>
                             </div>
                             <div class="field has-margin-top-25">
                                 <div class="control">
-                                    <input class="input" id="amount" name="amount" type="text" placeholder="0.001">
+                                    <input class="input" id="amount" name="amount" type="number" max="0.1" min="0.001" step="0.001" placeholder="0.001" tabindex="2">
                                 </div>
                             </div>
 
                             <% if (faucetUsePass) { %>
                                 <div class="field has-margin-top-25">
                                     <div class="control">
-                                        <input class="input" id="password" name="password" type="password" placeholder="***">
+                                        <input class="input" id="password" name="password" type="password" placeholder="***" tabindex="3">
                                     </div>
                                 </div>
                             <% } %>
@@ -146,12 +146,12 @@
                                         <img id="captcha_img" src="/captcha?<%- new Date().getTime() %>"/>
                                     </div>
                                     <div class="control">
-                                        <input class="input" id="captcha" name="captcha" type="input" placeholder="captcha">
+                                        <input class="input" id="captcha" name="captcha" type="input" placeholder="captcha" tabindex="3">
                                     </div>
                                 </div>
                             <% } %>
 
-                            <button id="sendButton" onclick="javascript:faucet_fetch();" class="button is-primary is-fullwidth has-margin-top-25">Send</button>
+                            <button id="sendButton" onclick="javascript:faucet_fetch();" class="button is-primary is-fullwidth has-margin-top-25" tabindex="4">Send</button>
                         </div> 
                     </div>
                 </div>
