--- a/html/index.html
+++ b/html/index.html
@@ -135,7 +135,7 @@
                             <% if (faucetUsePass) { %>
                                 <div class="field has-margin-top-25">
                                     <div class="control">
-                                        <input class="input" id="password" name="password" type="password" placeholder="***" tabindex="3">
+                                        <input class="input" id="password" name="password" type="password" placeholder="***" tabindex="4">
                                     </div>
                                 </div>
                             <% } %>
@@ -146,12 +146,12 @@
                                         <img id="captcha_img" src="/captcha?<%- new Date().getTime() %>"/>
                                     </div>
                                     <div class="control">
-                                        <input class="input" id="captcha" name="captcha" type="input" placeholder="captcha" tabindex="3">
+                                        <input class="input" id="captcha" name="captcha" type="input" placeholder="captcha" tabindex="4">
                                     </div>
                                 </div>
                             <% } %>
 
-                            <button id="sendButton" class="button is-primary is-fullwidth has-margin-top-25 tabindex="4"">Send</button>
+                            <button id="sendButton" class="button is-primary is-fullwidth has-margin-top-25" tabindex="3">Send</button>
                             </form>
                         </div> 
                     </div>
